manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hugo-deploy
  labels:
    app: hugo
  namespace: blog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hugo
  template:
    metadata:
      labels:
        app: hugo
    spec:
      containers:
        - name: blog
          image: registry.cn-hangzhou.aliyuncs.com/incubator4/hugo-blog:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
              cpu: "50m"
          ports:
            - containerPort: 80
