manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-svc
  namespace: blog
spec:
  selector:
    app: hugo
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
