manifests/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: blog-ingress
  namespace: blog
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`blog.incubator4.com`) || Host(`blog.k3s.incubator4.com`)
      kind: Rule
      services:
        - name: blog-svc
          port: 80
  tls:
    secretName: blog-incubator4-tls
